optimized the graphics

--- a/img/.picasaoriginals/.picasa.ini
+++ b/img/.picasaoriginals/.picasa.ini
@@ -17,3 +17,9 @@ width=941
 height=240
 textactive=0
 rotate=rotate(1)
+[mousefall.png]
+filters=PicnikTint=1,0.000000,ffa4c9d6;dir_tint=1,0.500000,0.500000,0.250000,0.250000,ffffffff,0;
+moddate=0000468832d00000
+width=219
+height=366
+textactive=0
